--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,18 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [148] Eduard Gorbunov, Filip Hanzely, and Peter Richtárik<br>
+          <b>Local SGD: unified theory and new efficient methods</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2011.02828">arXiv</a>] [code: S-Local-SVRG] <br>
+          <br>
+
+          [147] Dmitry Kovalev, Anastasia Koloskova, Martin Jaggi, Peter Richtárik, and Sebastian U. Stich<br>
+          <b>A linearly convergent algorithm for decentralized optimization: sending less bits for free!</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2011.01697">arXiv</a>]  <br>
+          <br>
+
           [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
           <b>Optimal client sampling for federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
