--- a/i_team.html
+++ b/i_team.html
@@ -51,6 +51,7 @@
 
           <h2>Research Scientists </h2>
           <ul>
+            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2020-present) </li>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (2/2020-present) </li>
             <li><a href="https://lcondat.github.io">Laurent Condat</a> (11/2019-present) </li>
           </ul>
@@ -59,7 +60,7 @@
           <ul>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (8/2020-present)</li>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
-            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-present)</li>
+            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-9/2020)</li>
             <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)</li>
             <li><a href="https://qianxunk.github.io">Xun Qian</a> (11/2018-present)</li>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (1/2018-1/2019)<br></li>
