--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
         <div id="content">
 
 
+<h3>November 6, 2020</h3>
+<h1>ICML 2021 Area Chair</h1>
+<br>
+
+
+I've accepted an invite to serve the machine learning community as an Area Chair for <a href="https://icml.cc/Conferences/2021">ICML 2021.</a>
+I'll be a tough (but friendly) Area Chair:  I expect the best from the reviewers and will do all I can to make sure the reviews and reviewer discussion
+are as fair and substantial as possible.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>November 3, 2020</h3>
 <h1>New Paper</h1>
