--- a/i_papers.html
+++ b/i_papers.html
@@ -619,7 +619,7 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
 
           [65] Nicolas Loizou and Peter Richtárik<br>
           <b>Momentum and stochastic momentum for stochastic gradient, Newton, proximal point and subspace descent methods</b><br>
-            <a href="http://link.springer.com/article/10.1007/s10589-020-00220-z">Computational Optimization and Applications, 1-58</a> <br>
+            <a href="http://link.springer.com/article/10.1007/s10589-020-00220-z">Computational Optimization and Applications 77(3):653-710, 2020</a> <br>
           [<a href="https://arxiv.org/abs/1712.09677">arXiv</a>]<br>
           <br>
 
