--- a/i_team.html
+++ b/i_team.html
@@ -94,7 +94,7 @@
           <h2> Research Interns</h2>
           <ul>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-present<br> </li>
-            <li>Wenlin Chen (University of Manchester & University of Cambridge), 8/2020-present</li>
+            <li>Wenlin Chen (University of Manchester & University of Cambridge), 8/2020-9/2020</li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 6/2020-present</li>
             <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-6/2020</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-present</li>
