--- a/i_team.html
+++ b/i_team.html
@@ -64,7 +64,7 @@
             <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)</li>
             <li><a href="https://qianxunk.github.io">Xun Qian</a> (11/2018-present)</li>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (1/2018-1/2019)<br></li>
-            <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a> (5/2017<span class="style1" style="width: 300px;">-5/2019</span>)</li>
+            <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a> (5/2017-5/2019</span>)</li>
           </ul>
 
           <h2>PhD Students </h2>
@@ -93,8 +93,10 @@
 
           <h2> Research Interns</h2>
           <ul>
+
+            <li>Bokun Wang (University of California, Davis), 9/2020-present<br> </li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-present<br> </li>
-            <li>Wenlin Chen (University of Manchester & University of Cambridge), 8/2020-9/2020</li>
+            <li>Wenlin Chen (University of Cambridge), 8/2020-9/2020</li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 6/2020-present</li>
             <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-6/2020</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-present</li>
@@ -193,14 +195,14 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a href="http://filiphanzely.com/">Filip Hanzely</a>
               (9/2016<span class="style1" style="width: 300px;">–</span>7/2017)<br>
-            current position: PhD student @ KAUST
+            current position: Research Assistant Professor at TTIC
             </li>
 
             <li><a
                 href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)
             <br>thesis: Randomized iterative methods for linear systems:   momentum, inexactness and gossip
-            <br>   next position: postdoc at MILA, Montréal
+            <br>   current position: postdoc at MILA, Montréal
             </li>
 
             <li><a
@@ -243,7 +245,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
             <li><a href="http://www.mtakac.com/CV">Martin Takáč</a>
               (9/2010<span class="style1" style="width: 300px;">–3/2014</span>)<br>
             thesis: Randomized coordinate descent methods for big              data optimization<br>
-            current position: Assistant Professor, Lehigh              University, USA
+            current position: Associate Professor, Lehigh              University, USA
             </li>
 
           </ul>
