--- a/i_events.html
+++ b/i_events.html
@@ -61,6 +61,16 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
   </li>
 
 
+  <li><a href="http://federated-learning.org/rseml2021/"><b>RSEML 2021: Towards Robust, Secure and Efficient Machine Learning</b></a>, AAAI 2021 Workshop, February 2-9, 2021
+
+  <ul>
+    <li> Program Committee Member </li>
+  </ul>
+  </li>
+
+
+
+
 <li><b>IJCAI 2021</b>, Montreal, Canada
 
 <ul>
