--- a/i_events.html
+++ b/i_events.html
@@ -51,6 +51,15 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 <ol reversed>
 
+  <li><a href="https://icml.cc/Conferences/2021"><b>ICML 2021</b></a>, Virtual, July 18-24, 2021
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+
+  </li>
+
+
   <li> <a href="https://www.siam.org/conferences/cm/conference/op20"><b>OP20: SIAM Conference on Optimization</b></a>, postponed until 2021
 
     <ul>
@@ -71,7 +80,7 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 
 
-<li><b>IJCAI 2021</b>, Montreal, Canada
+<li><b>IJCAI 2021</b>, Montreal, Canada, 2021
 
 <ul>
 <li> Senior Program Committee Member </li>
