--- a/i_team.html
+++ b/i_team.html
@@ -58,7 +58,7 @@
 
           <h2>Postdocs </h2>
           <ul>
-            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (8/2020-present)</li>
+            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (8/2020-11/2020)</li>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
             <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-9/2020)</li>
             <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)</li>
