--- a/i_team.html
+++ b/i_team.html
@@ -99,12 +99,12 @@
             <li>Wenlin Chen (University of Cambridge), 8/2020-9/2020</li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 6/2020-present</li>
             <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-6/2020</li>
-            <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-present</li>
+            <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-11/2020</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li> Grigory Malinovsky (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
-            <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-present<br>  </li>
+            <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-12/2019<br>  </li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 6/2019-9/2019</li>
             <li><a href="https://github.com/Selim78">Sélim Chraibi</a> (Grenoble, Rhône-Alpes), 4/2019-9/2019<br> </li>
             <li> Ľudovít Horváth (Comenius University), 2/2019-3/2019 <br> </li>
