--- a/index.html
+++ b/index.html
@@ -43,6 +43,40 @@
         <div id="content">
 
 
+
+
+          <h3>December 8, 2020</h3>
+          <h1>Fall 2020 Semester at KAUST is Over</h1>
+          <br>
+
+
+          The Fall 2020 semester at KAUST is now over; I've had  alot of fun teaching my CS 331 class (Stochastic Gradient Descent Methods). At the very end I run into some
+          LaTeX issues after upgrading to Big Sur on Mac - should not have done that... 
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+          <h3>December 6, 2020</h3>
+          <h1>NeurIPS 2020 Started</h1>
+          <br>
+
+
+          Me and the members of my group will be attending <a href="https://neurips.cc/virtual/2020/public/index.html">NeurIPS 2020</a> - the event is starting today.
+          Marco Cuturi and me will co-chair the <a href="https://neurips.cc/virtual/2020/public/session_oral_21084.html">Optimization session (Trac 21) on Wednesday</a>. I am particularly looking forward to the workshops: <a href="https://opt-ml.org">OPT2020</a>, <a href="https://ppml-workshop.github.io">PPML</a> and <a href="http://128.1.38.43/SpicyFL/2020/">SpicyFL.</a>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
 <h3>November 6, 2020</h3>
 <h1>ICML 2021 Area Chair</h1>
 <br>
