--- a/i_papers.html
+++ b/i_papers.html
@@ -384,14 +384,12 @@
           <br>
 
           [97] Nicolas Loizou and Peter Richtárik<br>
-          <b>Revisiting randomized gossip algorithms: general framework,
-            convergence rates and novel block and accelerated protocols</b><br>
+          <b>Revisiting randomized gossip algorithms: general framework, convergence rates and novel block and accelerated protocols</b><br>
           [<a href="https://arxiv.org/abs/1905.08645">arXiv</a>]<br>
           <br>
 
           [96] Nicolas Loizou and Peter Richtárik<br>
-          <b>Convergence analysis of inexact randomized iterative
-            methods</b><br>
+          <b>Convergence analysis of inexact randomized iterative methods</b><br>
             To appear in SIAM Journal on Scientific Computing <br>
           [<a href="https://arxiv.org/abs/1903.07971">arXiv</a>] [code:
           iBasic, iSDSA, iSGD, iSPM, iRBK, iRBCD]<br>
@@ -401,14 +399,14 @@
           Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud
           Moshref, Dan R. K. Ports and Peter Richtárik<br>
           <b>Scaling distributed machine learning with in-network aggregation</b><br>
+          The 18th USENIX Symposium on Networked Systems Design and Implementation (NSDI '21 Fall) <br>
           [<a href="https://arxiv.org/abs/1903.06701">arXiv</a>] [code:
           SwitchML]<br>
           <br>
 
           [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko,
           Peter Richtárik and Sebastian Stich<br>
-          <b>Stochastic distributed learning with gradient quantization
-            and variance reduction</b><br>
+          <b>Stochastic distributed learning with gradient quantization and variance reduction</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1904.05115">arXiv</a>] [code:
           DIANA, VR-DIANA, SVRG-DIANA]<br>
