--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
 
 
 
+          <h3>December 12, 2020</h3>
+          <h1>Paper Accepted to NSDI 2021</h1>
+          <br>
+Our paper ``Scaling Distributed Machine Learning with In-Network Aggregation'', joint work with  Amedeo Sapio, Marco Canini, Chen-Yu Ho,
+Jacob Nelson, Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud Moshref, and Dan R. K. Ports,  was accepted to
+<a href="https://www.usenix.org/conference/nsdi21?ref=infosec-conferences.com">The 18th USENIX Symposium on Networked Systems Design and Implementation
+(NSDI '21 Fall)</a>. <br><br>
+
+Abstract:  <i>Training machine learning models in parallel is an increasingly important workload. We accelerate distributed parallel training by designing a communication primitive that uses a programmable switch dataplane to execute a key step of the training process. Our approach, SwitchML, reduces the volume of exchanged data by aggregating the model updates from multiple workers in the network. We co-design the switch processing with the end-host protocols and ML frameworks to provide an efficient solution that speeds up training by up to 5.5× for a number of real-world benchmark models.</i>
+
+
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
 
           <h3>December 8, 2020</h3>
           <h1>Fall 2020 Semester at KAUST is Over</h1>
@@ -51,7 +70,7 @@
 
 
           The Fall 2020 semester at KAUST is now over; I've had  alot of fun teaching my CS 331 class (Stochastic Gradient Descent Methods). At the very end I run into some
-          LaTeX issues after upgrading to Big Sur on Mac - should not have done that... 
+          LaTeX issues after upgrading to Big Sur on Mac - should not have done that...
           <br>
 
           <br>
