SIAM J Sci Comp

--- a/i_papers.html
+++ b/i_papers.html
@@ -390,7 +390,7 @@
 
           [96] Nicolas Loizou and Peter Richtárik<br>
           <b>Convergence analysis of inexact randomized iterative methods</b><br>
-            To appear in SIAM Journal on Scientific Computing <br>
+          SIAM Journal on Scientific Computing 42(6), A3979–A4016, 2020 <br>
           [<a href="https://arxiv.org/abs/1903.07971">arXiv</a>] [code:
           iBasic, iSDSA, iSGD, iSPM, iRBK, iRBCD]<br>
           <br>
