--- a/i_papers.html
+++ b/i_papers.html
@@ -390,7 +390,7 @@
 
           [96] Nicolas Loizou and Peter Richtárik<br>
           <b>Convergence analysis of inexact randomized iterative methods</b><br>
-          SIAM Journal on Scientific Computing 42(6), A3979–A4016, 2020 <br>
+          <a href="https://epubs.siam.org/doi/abs/10.1137/19M125248X">SIAM Journal on Scientific Computing 42(6), A3979–A4016, 2020</a> <br>
           [<a href="https://arxiv.org/abs/1903.07971">arXiv</a>] [code:
           iBasic, iSDSA, iSGD, iSPM, iRBK, iRBCD]<br>
           <br>
@@ -414,7 +414,7 @@
 
           [93] El Houcine Bergou, Eduard Gorbunov and Peter Richtárik<br>
           <b>Stochastic three points method for unconstrained smooth minimization</b><br>
-          To appear in: SIAM Journal on Optimization <br>
+          <a href="https://epubs.siam.org/doi/abs/10.1137/19M1244378">SIAM Journal on Optimization 30(4):2726-2749, 2020</a> <br>
           [<a href="https://arxiv.org/abs/1902.03591">arXiv</a>] [code: STP]<br>
           <br>
 
