--- a/i_team.html
+++ b/i_team.html
@@ -58,7 +58,7 @@
 
           <h2>Postdocs </h2>
           <ul>
-            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (8/2020-11/2020)</li>
+            <li><a href="https://fhanzely.github.io">Filip Hanzely</a> (8/2020-11/2020)</li>
             <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
             <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-9/2020)</li>
             <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)</li>
@@ -81,7 +81,7 @@
           <h2>MS Students </h2>
           <ul>
             <li>Igor Sokolov (8/2020-present)</li>
-            <li><a href="https://scholar.google.com/citations?user=4w2W9KQAAAAJ&hl=ru">Grigory Malinovsky</a> (8/2020-present)</li>
+            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-present)</li>
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-present)</li>
@@ -103,7 +103,7 @@
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
-            <li> Grigory Malinovsky (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
+            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-12/2019<br>  </li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 6/2019-9/2019</li>
             <li><a href="https://github.com/Selim78">Sélim Chraibi</a> (Grenoble, Rhône-Alpes), 4/2019-9/2019<br> </li>
