--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
 
 
 
+
+          <h3>December 15, 2020</h3>
+          <h1>Vacation</h1>
+          <br>
+I am on vacation until early January, 2021.
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
           <h3>December 12, 2020</h3>
           <h1>Paper Accepted to NSDI 2021</h1>
           <br>
@@ -64,6 +80,8 @@ Jacob Nelson, Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud Moshref,
           <br>
 
 
+
+
           <h3>December 8, 2020</h3>
           <h1>Fall 2020 Semester at KAUST is Over</h1>
           <br>
@@ -80,6 +98,8 @@ Jacob Nelson, Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud Moshref,
           <br>
 
 
+
+
           <h3>December 6, 2020</h3>
           <h1>NeurIPS 2020 Started</h1>
           <br>
@@ -94,6 +114,74 @@ Jacob Nelson, Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud Moshref,
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
           <br>
+
+
+
+
+          <h3>November 24, 2020</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://opt-ml.org/papers/2020/paper_61.pdf">"Error Compensated Loopless SVRG for Distributed Optimization"</a> -
+          joint work with <a href="https://qianxunk.github.io/">Xun Qian</a>, <a href="https://www.researchgate.net/profile/Hanze_Dong">Hanze Dong</a>, and
+          <a href="http://tongzhang-ml.org/">Tong Zhang</a>.<br>
+          <br>
+
+          Abstract: <i>
+            A key bottleneck in distributed training of large scale machine learning models is the overhead related
+            to communication of gradients. In order to reduce the communicated cost, gradient compression
+            (e.g., sparsification and quantization) and error compensation techniques are often used. In this
+            paper, we propose and study a new efficient method in this space: error compensated loopless SVRG
+            method (L-SVRG). Our method is capable of working with any contraction compressor (e.g., TopK
+            compressor), and we perform analysis for strongly convex optimization problems in the composite
+            case and smooth case. We prove linear convergence rates for both cases and show that in the smooth
+            case the rate has a better dependence on the contraction factor associated with the compressor.
+            Further, we show that in the smooth case, and under some certain conditions, error compensated
+            L-SVRG has the same convergence rate as the vanilla L-SVRG method. Numerical experiments are
+            presented to illustrate the efficiency of our method.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+          <h3>November 24, 2020</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://opt-ml.org/papers/2020/paper_59.pdf">"Error Compensated Proximal SGD and RDA"</a> -
+          joint work with <a href="https://qianxunk.github.io/">Xun Qian</a>, <a href="https://www.researchgate.net/profile/Hanze_Dong">Hanze Dong</a>, and
+          <a href="http://tongzhang-ml.org/">Tong Zhang</a>.<br>
+          <br>
+
+          Abstract: <i>
+            Communication cost is a key bottleneck in distributed training of large machine learning models. In
+            order to reduce the amount of communicated data, quantization and error compensation techniques
+            have recently been studied. While the error compensated stochastic gradient descent (SGD) with
+            contraction compressor (e.g., TopK) was proved to have the same convergence rate as vanilla SGD in
+            the smooth case, it is unknown in the regularized case. In this paper, we study the error compensated
+            proximal SGD and error compensated regularized dual averaging (RDA) with contraction compressor
+            for the composite finite-sum optimization problem. Unlike the smooth case, the leading term in the
+            convergence rate of error compensated proximal SGD is dependent on the contraction compressor
+            parameter in the composite case, and the dependency can be improved by introducing a reference
+            point to reduce the compression noise. For error compensated RDA, we can obtain better dependency
+            of compressor parameter in the convergence rate. Extensive numerical experiments are presented to
+            validate the theoretical results.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
 
 
 <h3>November 6, 2020</h3>
