--- a/i_papers.html
+++ b/i_papers.html
@@ -52,7 +52,7 @@
           <h1> Prepared in 2020 </h1>
 
           [150] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
-          <b>Error Compensated loopless SVRG for distributed optimization</b><br>
+          <b>Error compensated loopless SVRG for distributed optimization</b><br>
           <span class="important">Federated Learning Paper</span><br>
           <a href="https://opt-ml.org/papers/2020/paper_61.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning </a> <br>
           [<a href="https://opt-ml.org/posters/2020/poster_61.pdf">poster</a>] [code: EC-LSVRG] <br>
