OPT 2020: NEURIPS 2020 posters

--- a/i_papers.html
+++ b/i_papers.html
@@ -54,13 +54,13 @@
           [150] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
           <b>Error compensated loopless SVRG for distributed optimization</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          <a href="https://opt-ml.org/papers/2020/paper_61.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning </a> <br>
+          <a href="https://opt-ml.org/papers/2020/paper_61.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) </a> <br>
           [<a href="https://opt-ml.org/posters/2020/poster_61.pdf">poster</a>] [code: EC-LSVRG] <br>
           <br>
 
           [149] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
           <b>Error compensated proximal SGD and RDA</b><br>
-          <a href="https://opt-ml.org/papers/2020/paper_59.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning </a> <br>
+          <a href="https://opt-ml.org/papers/2020/paper_59.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
            [<a href="https://opt-ml.org/posters/2020/poster_59.pdf">poster</a>] [code: EC-SGD, EC-RDA] <br>
           <br>
 
@@ -104,7 +104,9 @@
 
           [142] Laurent Condat, Grigory Malinovsky, and Peter Richtárik<br>
           <b>Distributed proximal splitting algorithms with rates and acceleration</b><br>
-          [<a href="https://arxiv.org/abs/2010.00952">arXiv</a>]   <br>
+          <a href="https://opt-ml.org/papers/2020/paper_31.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
+          <span class="important">Spotlight Talk</span><br>
+          [<a href="https://arxiv.org/abs/2010.00952">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_31.png">poster</a>]   <br>
           <br>
 
           [141] Robert M. Gower, Mark Schmidt, Francis Bach and Peter Richtárik<br>
@@ -115,8 +117,9 @@
 
           [140] Xun Qian, Peter Richtárik, and Tong Zhang<br>
           <b>Error compensated distributed SGD can be accelerated</b><br>
+          <a href="https://opt-ml.org/papers/2020/paper_60.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2010.00091">arXiv</a>] [code: ECLK]  <br>
+          [<a href="https://arxiv.org/abs/2010.00091">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_60.pdf">poster</a>] [code: ECLK]  <br>
           <br>
 
           [139] Albert S. Berahas, Majid Jahani, Peter Richtárik, and Martin Takáč<br>
@@ -126,6 +129,8 @@
 
           [138] Zhize Li, Hongyan Bao, Xiangliang Zhang and Peter Richtárik <br>
           <b>PAGE: A simple and optimal probabilistic gradient estimator for nonconvex optimization</b><br>
+          <a href="https://opt-ml.org/papers/2020/paper_76.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) </a> <br>
+          <span class="important">Spotlight Talk</span><br>
           [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [code: PAGE]  <br>
           <br>
 
@@ -166,12 +171,14 @@
 
           [131] Motasem Alfarra, Slavomír Hanzely, Alyazeed Albasyoni, Bernard Ghanem, and Peter Richtárik <br>
           <b>Adaptive learning of the optimal mini-batch size of SGD</b><br>
-          [<a href="https://arxiv.org/abs/2005.01097">arXiv</a>]  <br>
+          <a href="https://opt-ml.org/posters/2020/poster_50.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) </a> <br>
+          [<a href="https://arxiv.org/abs/2005.01097">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_10.png">poster</a>] <br>
           <br>
 
           [130] Adil Salim, Laurent Condat, Konstantin Mishchenko, and Peter Richtárik <br>
           <b>Dualize, split, randomize: fast nonsmooth optimization algorithms</b><br>
-          [<a href="https://arxiv.org/abs/2004.02635">arXiv</a>] [code: PDDY, SPDDY, SPD3O, SPAPC] <br>
+          <a href="https://opt-ml.org/papers/2020/paper_54.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
+          [<a href="https://arxiv.org/abs/2004.02635">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_54.pdf">poster</a>] [code: PDDY, SPDDY, SPD3O, SPAPC] <br>
           <br>
 
           [129] Atal Narayan Sahu, Aritra Dutta, Aashutosh Tiwari, and Peter Richtárik <br>
@@ -224,7 +231,8 @@
 
           [121] Samuel Horváth, Lihua Lei, Peter Richtárik and Michael I. Jordan<br>
           <b>Adaptivity of stochastic gradient methods for nonconvex optimization</b><br>
-          [<a href="https://arxiv.org/abs/2002.05359">arXiv</a>]<br>
+          <a href="https://opt-ml.org/papers/2020/paper_50.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
+          [<a href="https://arxiv.org/abs/2002.05359">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_50.pdf">poster</a>] <br>
           <br>
 
           [120] Filip Hanzely, Dmitry Kovalev and Peter Richtárik<br>
@@ -321,8 +329,8 @@
 
           [107] Mher Safaryan and Peter Richtárik<br>
           <b>On stochastic sign descent methods</b><br>
-          [<a href="https://arxiv.org/abs/1905.12938">arXiv</a>] [code:
-          signSGD, signSGDmaj]<br>
+          <a href="https://opt-ml.org/papers/2020/paper_14.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
+          [<a href="https://arxiv.org/abs/1905.12938">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_14.png">poster</a>] [code: signSGD, signSGDmaj]<br>
           <br>
 
           [106] Adil Salim, Dmitry Kovalev and Peter Richtárik<br>
