--- a/i_papers.html
+++ b/i_papers.html
@@ -79,7 +79,7 @@
           [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
           <b>Optimal client sampling for federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          NeurIPS 2020 Privacy Preserving Machine Learning Workshop <br>
+          <a href="https://ppml-workshop.github.io/#papers">Privacy Preserving Machine Learning (NeurIPS 2020 Workshop)</a> <br>          
           [<a href="https://arxiv.org/abs/2010.13723">arXiv</a>] [code: OCS, AOCS]  <br>
           <br>
 
