--- a/i_teaching.html
+++ b/i_teaching.html
@@ -49,6 +49,8 @@
 
 <ul>
 
+  <li> CS 332, Federated Learning (<a href="https://piazza.com/kaust.edu.sa/spring2021/cs332">Spring 2021 - Piazza</a>)</li>
+
   <li> CS 331, Stochastic Gradient Descent Methods (<a href="https://piazza.com/kaust.edu.sa/fall2020/cs331">Fall 2020 - Piazza</a>)</li>
 
   <li> CS 390T, Special Topics in Federated Learning (<a href="https://piazza.com/kaust.edu.sa">Spring 2020 - Piazza</a>)</li>
