--- a/i_papers.html
+++ b/i_papers.html
@@ -79,7 +79,7 @@
           [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
           <b>Optimal client sampling for federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          <a href="https://ppml-workshop.github.io/#papers">Privacy Preserving Machine Learning (NeurIPS 2020 Workshop)</a> <br>          
+          <a href="https://ppml-workshop.github.io/#papers">Privacy Preserving Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           [<a href="https://arxiv.org/abs/2010.13723">arXiv</a>] [code: OCS, AOCS]  <br>
           <br>
 
@@ -112,7 +112,7 @@
 
           [141] Robert M. Gower, Mark Schmidt, Francis Bach and Peter Richtárik<br>
           <b>Variance-reduced methods for machine learning</b><br>
-          <a href="https://ieeexplore.ieee.org/document/9226504">Proceedings of the IEEE</a> <br>
+          <a href="https://ieeexplore.ieee.org/document/9226504">Proceedings of the IEEE 108 (11):1968--1983, 2020</a> <br>
           [<a href="https://arxiv.org/abs/2010.00892">arXiv</a>]   <br>
           <br>
 
