--- a/i_talks.html
+++ b/i_talks.html
@@ -47,6 +47,9 @@
 
 <h1> Future Talks</h1>
 
+<p>
+AMCS/STAT Graduate Seminar, KAUST, April 22, 2021
+</p>
 
 <p>
 "Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
@@ -988,68 +991,7 @@ and Big Data</a>, Edinburgh, May 1-3, 2013 (organizer)<br>
 
           <p>[53] <a
 href="http://www.ihes.fr/jsp/site/Portal.jsp?document_id=3270&amp;portlet_id=1151">Fête
-Parisienne
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              in Computation, Inference and Optimization</a>, Paris,
+Parisienne in Computation, Inference and Optimization</a>, Paris,
             France, March 20, 2013 (invited by Francis Bach and Michael
             Jordan) [<a href="talks/TALK-2013-03-20-Paris.pdf">slides</a>]</p>
           <p>[52] <a href="http://www.edsiamchapter.co.uk/">Edinburgh
