--- a/index.html
+++ b/index.html
@@ -45,6 +45,47 @@
 
 
 
+<h3>January 11, 2021</h3>
+<h1>Call for Al-Khwarizmi Doctoral Fellowships (apply by Jan 22, 2021)</h1>
+<br>
+
+If you are from Europe and want to apply for a PhD position in my Optimization and Machine Learning group at KAUST, you may wish to apply for the
+<a href="https://cemse.kaust.edu.sa/alkhwarizmi">European Science Foundation Al-Khwarizmi Doctoral Fellowship</a>.
+
+<a href="https://cemse.kaust.edu.sa/alkhwarizmi"> <img alt="" src="imgs/al-khwarizmi.png" width="200"></a>
+
+<br>
+ Here is the official blurb:
+<br>
+<br>
+"The Al-Khwarizmi Graduate Fellowship scheme invites applications for doctoral fellowships, with the submission deadline of 22 January 2021, 17:00 CET.
+The King Abdullah University of Science and Technology (KAUST) in the Kingdom of Saudi Arabia with support from the European Science Foundation (ESF)
+launches a competitive doctoral fellowship scheme to welcome students from the European continent for a research journey to a top international university
+in the Middle East. The applications will be evaluated via an independent peer-review process managed by the ESF. The selected applicants will be offered
+generous stipends and free tuition for Ph.D. studies within one of KAUST academic programs. Strong applicants who were not awarded a Fellowship but passed
+KAUST admission requirements will be offered the possibility to join the University as regular Ph.D. students with the standard benefits that include the
+usual stipends and free tuition."
+<br>
+<br>
+- Submission deadline = 22 January 2021 @ 17:00 CET <br>
+- Duration of the Fellowship = 3 years (extensions may be considered in duly justified cases)<br>
+- Annual living allowance/stipend = USD 38,000  (net)<br>
+- Approx USD 50,000 annual benefits = free tuition, free student housing on campus, relocation support, and medical and dental coverage<br>
+- Each Fellowship includes a supplementary grant of USD 6,000 at the Fellow’s disposal for research-related expenses such as conference attendance<br>
+- The applications must be submitted in two steps, with the formal documents and transcripts to be submitted to KAUST Admissions in Step 1, and
+the research proposal to be submitted to the ESF in Step 2. Both steps should be completed in parallel before the call deadline.<br>
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
           <h3>December 15, 2020</h3>
           <h1>Vacation</h1>
           <br>
