--- a/i_join.html
+++ b/i_join.html
@@ -70,8 +70,7 @@
 
           <ol>
 
-          <li> <a href="https://vsrp.kaust.edu.sa"> VSRP</a> (Visiting
-          Student Research Program)
+          <li> <a href="https://vsrp.kaust.edu.sa"> VSRP</a> (Visiting Student Research Program)
 
           <ul>
 
@@ -123,12 +122,14 @@
           you start in August in year Y, you will get your MS degree in
           December in year Y+1, and will continue as a PhD student from
           January of year Y+2. If you have an MS degree already, apply
-          directly to the PhD program. PhD at KAUST takes a minimum of
+          directly to the PhD program. If you are from Europe, I recommend that you also apply
+          for the <a href="https://cemse.kaust.edu.sa/alkhwarizmi">European Science Foundation Al Khwarizmi Doctoral Fellowship</a> - this is more prestigious than the standard KAUST Fellowship.
+          PhD at KAUST takes a minimum of
           2.5 years. We accept students for entry in Fall (August) and
           Spring (January). However, most students start in the Fall.
           There are several application rounds throughout the year, and
           hence you can essentially apply at any time. <a
-            href="https://cemse.kaust.edu.sa/study-kaust">Apply here.</a><br>
+            href="https://www.kaust.edu.sa/en/study/applying-to-kaust">Apply here.</a><br>
           <br>
           I can supervise students in all programs in the <a
             href="https://cemse.kaust.edu.sa">CEMSE division</a>: <a
@@ -141,6 +142,8 @@
           (Statistics). My current students study in all of these
           programs except for EE.<br>
           <br>
+
+
 
           <h1>Postdocs and Research Scientists
           </h1>
