--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h3>January 12, 2021</h3>
           <h1>Paper Accepted to ICLR 2021</h1>
           <br>
-    Our paper ``A Better Alternative to Error Feedback for Communication-efficient Distributed Learning'', joint work with  <a href="https://samuelhorvath.github.io">Samuel Horváth</a>,  was accepted to
+    Our paper "A Better Alternative to Error Feedback for Communication-efficient Distributed Learning'', joint work with  <a href="https://samuelhorvath.github.io">Samuel Horváth</a>,  was accepted to
       <a href="https://openreview.net/forum?id=vYVI1CHPaQg">The 9th International Conference on Learning Representations (ICLR 2021)</a>.<br><br>
 
     <i>Abstract:</i>  Modern large-scale machine learning applications require stochastic optimization algorithms to be implemented on distributed compute systems. A key bottleneck of such systems is the communication overhead for exchanging information across the workers, such as stochastic gradients. Among the many techniques proposed to remedy this issue, one of the most successful is the framework of compressed communication with error feedback (EF).
