--- a/i_team.html
+++ b/i_team.html
@@ -73,7 +73,7 @@
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
-            <li><a href="http://www.ali-sa.org/">Alibek Sailanbayev</a>  (1/2019-present)</li>
+            <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a>  (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020)</li>
           </ul>
@@ -138,10 +138,10 @@
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br> </li>
             <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 10/2017-11/2017<br> </li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 10/2017<br> </li>
-            <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita Doikov</a> (HSE Moscow), 10/2017-11/2017<br> </li>
+            <li><a href="https://doikov.com">Nikita Doikov</a> (HSE Moscow), 10/2017-11/2017<br> </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10/2017<br> </li>
             <li> <a href="http://mtakac.com">Martin Takáč</a> (Lehigh), 5/2017</li>
-            <li><a href="Alibek%20Sailanbayev">Alibek Sailanbayev</a> (Nazarbayev University), 4/2017</li>
+            <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a> (Nazarbayev University), 4/2017</li>
             <li><a href="http://jakubkonecny.com">Jakub Konečný</a> (Edinburgh), 4/2017</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (HSE Moscow), 4/2017</li>
